methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   return true
}        

1*droite()
